--- a/services/route-53/cdn.yml
+++ b/services/route-53/cdn.yml
@@ -66,7 +66,7 @@ Resources:
     DependsOn: CDNOriginIdentity
     Version: "2012-10-17"
   
-  #Create new DNS entry for the newly deployed CDN
+  #Create new DNS entry for the newly deployed CDN, currently not working
   CloudFrontDNSEntries:
     Type: AWS::Route53::RecordSetGroup
     Properties:
@@ -74,8 +74,12 @@ Resources:
       RecordSets:
         - AliasTarget:
             HostedZoneId: Z2FDTNDATAQYW2
-            DNSName: !Sub CDN.DomainName
+            DNSName: !GetAtt CDN.DomainName
           Name: !Sub "qa.${DomainName}"
           Type: A
     DependsOn: CDN
   
+Outputs:
+  CloudFrontURL:
+    Value: !GetAtt CDN.DomainName
+    Description: CloudFront URL for updating DNS record
