--- a/services/buildspec.yml
+++ b/services/buildspec.yml
@@ -59,8 +59,10 @@ phases:
     commands:
       - echo "Completed SOAR service build on `date`"
 
+# Add your artifacts here
 artifacts:
   files:
     - ./services/hello-world/transformed.yaml
     - ./services/budget-alarms/transformed.yaml
     - ./services/codepipeline-notifier/transformed.yaml
+    - ./services/s3-to-es-forwarder/transformed.yaml
