--- a/infra/soar/cicd.yml
+++ b/infra/soar/cicd.yml
@@ -42,6 +42,7 @@ Resources:
             - s3:Put*
             - s3:List*
             - s3:Get*
+            - s3:Create*
             Resource:
             - !GetAtt CodeBuildArtifactsBucket.Arn
             - !GetAtt LambdaArtifactsBucket.Arn
@@ -51,6 +52,12 @@ Resources:
             - Fn::Sub:
                 - "${bucket_arn}/*"
                 - bucket_arn: !GetAtt LambdaArtifactsBucket.Arn
+            Effect: Allow
+
+          - Action:
+            - s3:Create*
+            - cloudtrail:*
+            Resource: "*"
             Effect: Allow
 
           - Action:
