--- a/infra/soar/cloudtrail.yml
+++ b/infra/soar/cloudtrail.yml
@@ -2,17 +2,6 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Description: Cloudtrail
 
-Mappings:
-  Branch:
-    us-east-1:
-      qa: master
-      prod: release
-  # So I don't get ciruclar dependencies
-  FunctionArn:
-    us-east-1:
-      qa: arn:aws:lambda:us-east-1:306967644367:function:qa-HelloWorld-HelloWorldFunction-56I71SZROMDW
-      prod: arn:aws:lambda:us-east-1:306967644367:function:qa-HelloWorld-HelloWorldFunction-56I71SZROMDW
-
 Parameters:
   AwsEnvironment:
     Type: String
@@ -25,15 +14,13 @@ Resources:
     Type: AWS::S3::Bucket
     Properties:
       BucketName: !Sub "${AwsEnvironment}-comp9447-team4-cloudtrail"
+      # Comment this out to avoid circular dependencies
       # https://docs.aws.amazon.com/elasticsearch-service/latest/developerguide/es-aws-integrations.html
-      # NotificationConfiguration:
-      #   LambdaConfigurations:
-      #     - Event: s3:ObjectCreated:Put
-      #       Function:  
-      #         Fn::FindInMap:
-      #         - FunctionArn
-      #         - !Sub "${AWS:Region}"
-      #         - !Sub "${AwsEnvironment}"
+      NotificationConfiguration:
+        LambdaConfigurations:
+          - Event: s3:ObjectCreated:Put
+            Function: 
+              Fn::ImportValue: "${AwsEnvironment}-S3ToEsForwarder:AllCloudTrailEsForwarder"
 
   BucketPolicy:
     Type: AWS::S3::BucketPolicy
