--- a/infra/soar/cicd.yml
+++ b/infra/soar/cicd.yml
@@ -107,7 +107,6 @@ Resources:
       # TODO: make this less permissive
       ManagedPolicyArns:
       - arn:aws:iam::aws:policy/AWSCloudFormationFullAccess
-      - arn:aws:iam::aws:policy/AmazonDynamoDBFullAccess
       - arn:aws:iam::aws:policy/AmazonSNSFullAccess
       - arn:aws:iam::aws:policy/AWSCodePipelineFullAccess
 
@@ -321,7 +320,7 @@ Resources:
       # DEPLOYMENTS
       # https://docs.aws.amazon.com/codepipeline/latest/userguide/action-reference-CloudFormation.html
       #########################
-        # HELLO WORLD
+      # HELLO WORLD
       - Name: Deploy
         Actions:
         - Name: DeployHelloWorld
@@ -378,7 +377,7 @@ Resources:
           InputArtifacts:
           - Name: BuildArtifact
           Configuration:
-            ActionMode: CREATE_UPDATE
+            ActionMode: REPLACE_ON_FAILURE
             StackName: !Sub "${AwsEnvironment}-S3ToEsForwarder"
             TemplatePath: "BuildArtifact::services/s3-to-es-forwarder/transformed.yaml"
             RoleArn: !GetAtt CodePipelineServiceRole.Arn
