--- a/infra/soar/cicd.yml
+++ b/infra/soar/cicd.yml
@@ -386,6 +386,25 @@ Resources:
               {
                 "AwsEnvironment":"${AwsEnvironment}"
               }
+       # ESToDiscordNotifier
+        - Name: DeployEsToDiscordNotifier
+          ActionTypeId:
+            Category: Deploy
+            Owner: AWS
+            Version: '1'
+            Provider: CloudFormation
+          InputArtifacts:
+          - Name: BuildArtifact
+          Configuration:
+            ActionMode: REPLACE_ON_FAILURE
+            StackName: !Sub "${AwsEnvironment}-EsToDiscordNotifier"
+            TemplatePath: "BuildArtifact::services/s3-to-es-notifier/transformed.yaml"
+            RoleArn: !GetAtt CodePipelineServiceRole.Arn
+            Capabilities: CAPABILITY_IAM,CAPABILITY_AUTO_EXPAND
+            ParameterOverrides: !Sub >-
+              {
+                "AwsEnvironment":"${AwsEnvironment}"
+              }
 Outputs:
   CodeBuildArtifactsBucket:
     Value: !Ref CodeBuildArtifactsBucket
