--- a/services/buildspec.yml
+++ b/services/buildspec.yml
@@ -53,7 +53,15 @@ phases:
         --output-template-file ./transformed.yaml
         --s3-bucket "${LAMBDA_ARTIFACTS_BUCKET}"
       - cd -
-      # # TODO: Add ES
+      # ES To Discord Notifier
+      - cd services/es-to-discord-notifier
+      - sam build
+      - >-
+        sam package
+        --template-file  ./.aws-sam/build/template.yaml
+        --output-template-file ./transformed.yaml
+        --s3-bucket "${LAMBDA_ARTIFACTS_BUCKET}"
+      - cd -
 
 
   post_build:
@@ -66,5 +74,5 @@ artifacts:
     - ./services/hello-world/transformed.yaml
     - ./services/budget-alarms/transformed.yaml
     - ./services/codepipeline-notifier/transformed.yaml
-    # TODO: Add ES
     - ./services/s3-to-es-forwarder/transformed.yaml
+    - ./services/es-to-discord-notifier/transformed.yaml
