--- a/services/macie-poller/template.yaml
+++ b/services/macie-poller/template.yaml
@@ -15,7 +15,7 @@ Resources:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
       CodeUri: macie_poller/
-      Role: !Ref MaciePollerRole
+      Role: !GetAtt MaciePollerRole.Arn
       Handler: app.lambda_handler
       Runtime: python3.8
       Events:
